--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.21.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
