--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-select": "^5.8.2"
+    "react-select": "^5.8.2",
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.3.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
