--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.6",
+    "@vitejs/plugin-react": "^4.3.3",
     "antd": "^5.21.6",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.2",
-    "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.3.3",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "autoprefixer": "^10.4.20"
+    "vite": "^5.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
