--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,12 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.6",
     "@vitejs/plugin-react": "^4.3.3",
-    "antd": "^5.21.6",
+    "antd": "^5.22.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.3",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.2",
     "tailwindcss": "^3.4.14",
